<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.ContentTitle"
        app:layout_constraintEnd_toStartOf="@+id/guidelineThumbnail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/ic_launcher"
        tools:text="Name" />

    <ImageView
        android:id="@+id/ivGender"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/gender_pascal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:srcCompat="@drawable/ic_gender" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Subtitle1"
        app:layout_constraintBottom_toBottomOf="@+id/ivGender"
        app:layout_constraintStart_toEndOf="@+id/ivGender"
        app:layout_constraintTop_toTopOf="@+id/ivGender"
        tools:text="Male" />

    <ImageView
        android:id="@+id/ivAge"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/age_pascal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivGender"
        app:srcCompat="@drawable/ic_age" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Subtitle1"
        app:layout_constraintBottom_toBottomOf="@+id/ivAge"
        app:layout_constraintStart_toEndOf="@+id/ivAge"
        app:layout_constraintTop_toTopOf="@+id/ivAge"
        tools:text="25" />

    <ImageView
        android:id="@+id/ivEyeColor"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/eye_color_pascal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAge"
        app:srcCompat="@drawable/ic_eye" />

    <TextView
        android:id="@+id/tvEyeColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Subtitle1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineThumbnail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivEyeColor"
        app:layout_constraintTop_toTopOf="@+id/ivEyeColor"
        tools:text="Blue" />

    <ImageView
        android:id="@+id/ivHairColor"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/hair_color_pascal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEyeColor"
        app:srcCompat="@drawable/ic_hair" />

    <TextView
        android:id="@+id/tvHairColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Subtitle1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineThumbnail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivHairColor"
        app:layout_constraintTop_toTopOf="@+id/ivHairColor"
        tools:text="Blue" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="142dp" />

    <ImageView
        android:id="@+id/ivThumbnail"
        android:layout_width="126dp"
        android:layout_height="176dp"
        android:contentDescription="@string/person_image_pascal"
        android:scaleType="fitCenter"
        android:tooltipText="@string/person_image_pascal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>