<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.ContentTitle"
        app:layout_constraintEnd_toStartOf="@+id/guidelineThumbnail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/ic_launcher"
        tools:text="Name" />

    <ImageView
        android:id="@+id/ivClassification"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/gender_pascal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:srcCompat="@drawable/ic_classification" />

    <TextView
        android:id="@+id/tvClassification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Subtitle1"
        app:layout_constraintBottom_toBottomOf="@+id/ivClassification"
        app:layout_constraintEnd_toStartOf="@+id/guidelineThumbnail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivClassification"
        app:layout_constraintTop_toTopOf="@+id/ivClassification"
        tools:text="Spirit" />

    <ImageView
        android:id="@+id/ivEyeColors"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/eye_colors_pascal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivClassification"
        app:srcCompat="@drawable/ic_eye" />

    <TextView
        android:id="@+id/tvEyeColors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Subtitle1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineThumbnail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivEyeColors"
        app:layout_constraintTop_toTopOf="@+id/ivEyeColors"
        tools:text="Red" />

    <ImageView
        android:id="@+id/ivHairColors"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/hair_colors_pascal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEyeColors"
        app:srcCompat="@drawable/ic_hair" />

    <TextView
        android:id="@+id/tvHairColors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Subtitle1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineThumbnail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivHairColors"
        app:layout_constraintTop_toTopOf="@+id/ivHairColors"
        tools:text="Light Orange" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="142dp" />

    <ImageView
        android:id="@+id/ivThumbnail"
        android:layout_width="126dp"
        android:layout_height="176dp"
        android:contentDescription="@string/species_image_pascal"
        android:scaleType="centerCrop"
        android:tooltipText="@string/species_image_pascal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>