<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.ContentTitle"
        app:layout_constraintEnd_toStartOf="@+id/guidelineThumbnail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/ic_launcher"
        tools:text="Name" />

    <ImageView
        android:id="@+id/ivClass"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/class_pascal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:srcCompat="@drawable/ic_tomato" />

    <TextView
        android:id="@+id/tvClass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Subtitle1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineThumbnail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivClass"
        app:layout_constraintTop_toTopOf="@+id/ivClass"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Airship" />

    <ImageView
        android:id="@+id/ivLength"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/length_pascal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClass"
        app:srcCompat="@drawable/ic_tomato" />

    <TextView
        android:id="@+id/tvLength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Subtitle1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineThumbnail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivLength"
        app:layout_constraintTop_toTopOf="@+id/ivLength"
        app:layout_constraintVertical_bias="0.0"
        tools:text="1000" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="142dp" />

    <ImageView
        android:id="@+id/ivThumbnail"
        android:layout_width="126dp"
        android:layout_height="176dp"
        android:contentDescription="@string/vehicle_image_pascal"
        android:scaleType="centerCrop"
        android:tooltipText="@string/vehicle_image_pascal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="ivLength,ivThumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description_pascal"
        android:textAppearance="@style/TextAppearance.BodyTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierBody" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLabel"
        tools:text="A military airship utilized by the government to access Laputa." />

</androidx.constraintlayout.widget.ConstraintLayout>